# save

./: .gitignore  README.md  app.json  babel.web.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.web.config.js
.github/workflows/: android-native-build.yml  android-native-selftest.yml  ci.yml
.history-memo/: 2026-03-05.md  2026-03-06.md
__tests__/: PrimaryButton.test.tsx  SecuritySetup.test.tsx  SetupFlows.test.tsx
__tests__/__snapshots__/: PrimaryButton.test.tsx.snap  SecuritySetup.test.tsx.snap
android/: gradlew  gradlew.bat
android/app/: build.gradle
android/app/src/androidTest/java/com/securevault/: NativeSelfTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  crypto_bridge.cpp
android/app/src/main/java/com/securevault/: KeystoreManager.kt  KeystoreMigration.kt  NativeCrypto.kt  SecurityModule.kt  SecurityPackage.kt
android/app/src/main/java/com/securevault/db/: DBManager.kt
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE_SCHEMA.md  DECISIONS_LOG.md  DEPLOY_GUIDE.md  IMPLEMENTATION_NATIVE_SECURITY.md  KNOWN_LIMITATIONS.md  PERFORMANCE_STRATEGY.md  PERMISSION_STRATEGY.md  SECURITY_MODEL.md  SETUP_NATIVE.md  STORAGE_MODEL.md  TESTING_STRATEGY.md  THREAT_MODEL.md  UI_DESIGN.md  USER_FLOW.md  VERIFICATION_NATIVE_IMPLEMENTATION.md  VERIFICATION_NATIVE_INTEGRATION.md  VERIFICATION_NATIVE_SECURITY.md
scripts/: check-node-npm.ps1  create-gradle-wrapper.ps1  fetch-native-deps.ps1  run-native-selftest.ps1
src/: App.tsx  index.tsx  index.web.tsx
src/components/: ErrorBoundary.tsx  PrimaryButton.tsx  SecureCard.tsx  TextField.tsx
src/native/: SecurityModule.ts  SecurityModule.web.ts
src/navigation/: RootNavigator.tsx
src/screens/: Onboarding.tsx  SecurityError.tsx  SecuritySetup.tsx  SetupBiometric.tsx  SetupPassword.tsx  SetupPattern.tsx  SetupPin.tsx  Splash.tsx  VaultList.tsx
src/styles/: theme.ts
web/: index.html
